# docs

./: .pre-commit-config.yaml  404.html  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: deploy.yml
about/: index.html
contributing/: index.html
development-tools/branch-naming-convention/: index.html
development-tools/pre-commit/: index.html
docs/: index.md
docs/data-visualization/: digital-earth.md
docs/development-tools/: branch-naming-convention.md  pre-commit.md
docs/gis/: digital-rivers.md
docs/hydrological-modeling/: serapis.md
docs/medium-articles/: data-science.md  gis.md  hydrology-and-hydraulics.md  software-development.md
docs/python-packages/: overview.md
docs/python-packages/data-visualization/: cleopatra.md
docs/python-packages/gis/: digital-rivers.md  pyramids.md
docs/python-packages/hydrological-modeling/: hapi.md
docs/python-packages/statistics/: statista.md
docs/python-packages/utility-packages/: oasis.md
docs/utility-packages/: oasis.md
medium-articles/data-science/: index.html
medium-articles/gis/: index.html
medium-articles/hydrology-and-hydraulics/: index.html
medium-articles/software-development/: index.html
python-packages/cloud/unicloud/: index.html
python-packages/data-visualization/cleopatra/: index.html
python-packages/data-visualization/digital-earth/: index.html
python-packages/gis/digital-rivers/: index.html
python-packages/gis/pyramids/: index.html
python-packages/overview/: index.html
search/: search_index.json
(+9 files in other folders)
